Ch06/config/webapp-deployment-v7.1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-8
  labels:
    app: webservice
    version: v8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webservice
      version: v8
  template:
    metadata:
      labels:
        app: webservice
        version: v8
    spec:
      containers:
      - name: webapp
        image: web-app:7.1
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
