Ch06/config/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: frontendservice-vs
#spec:
#  hosts:
#  - "*"
#  gateways:
#  - webapp-gateway
#  http:
#  - match:
#    - uri:
#        prefix: /
#    route:
#    - destination:
#        host: frontendservice
#    retries:
#      attempts: 1
#      perTryTimeout: 3s
#
